--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,41 @@
+default_install_hook_types: [commit-msg, pre-commit]
+default_stages: [commit, manual]
+fail_fast: false
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
-      - id: black-jupyter
-        language_version: python3
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+      - id: check-added-large-files
+  - repo: local
     hooks:
-      - id: isort
-  - repo: https://github.com/kynan/nbstripout
-    rev: 0.6.0
-    hooks:
-      - id: nbstripout
-
-  - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.6.3
-    hooks:
-      - id: nbqa-isort
+      - id: ruff
+        name: ruff
+        entry: poetry run ruff
+        require_serial: true
+        language: system
+        types: [python]
+      - id: black
+        name: black
+        entry: poetry run black
+        require_serial: true
+        language: system
+        types: [python]
+      - id: poetry-check
+        name: poetry check
+        entry: poetry check
+        language: system
+        files: pyproject.toml
+        pass_filenames: false
+      - id: poetry-lock-check
+        name: poetry lock check
+        entry: poetry lock
+        args: [--check]
+        language: system
+        pass_filenames: false
+      - id: mypy
+        name: mypy
+        entry: poetry run mypy src
+        # filenames should not be passed as they would collide with the config in pyproject.toml
+        pass_filenames: false
+        files: '^src(/[^/]*)*/[^/]*\.py$'
+        language: system
