--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ tensorboard = "^2.5.0"
 torch = "^2.0.0, !=2.0.1"
 tqdm = "*"
 notebook = "^7.0.3"
+rise = "^5.7.1"
+jupyter-contrib-nbextensions = "^0.7.0"
 
 
 [tool.poetry.extras]
