--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ tensorboard = "^2.5.0"
 # Torch 2.0.1 causes problems, see https://github.com/pytorch/pytorch/issues/100974
 torch = "^2.0.0, !=2.0.1"
 tqdm = "*"
-notebook = "^7.0.3"
+notebook = "<7.0.0"
 rise = "^5.7.1"
 jupyter-contrib-nbextensions = "^0.7.0"
 
