--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ traitlets = "5.9.0"
 matplotlib = "^3.8.0"
 pandas = {extras = ["performance"], version = "^2.1.0"}
 accsr = "^0.4.5"
+control = "^0.9.4"
+slycot = "^0.5.4"
 
 
 [tool.poetry.group.dev]
