--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-gymnasium = "*"
+gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
 numpy = "^1"
 packaging = "*"
 tensorboard = "^2.5.0"
