--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,10 +32,10 @@ repos:
         args: [--lock]
         language: system
         pass_filenames: false
-      - id: mypy
-        name: mypy
-        entry: poetry run mypy src
-        # filenames should not be passed as they would collide with the config in pyproject.toml
-        pass_filenames: false
-        files: '^src(/[^/]*)*/[^/]*\.py$'
-        language: system
+      #- id: mypy
+      #  name: mypy
+      #  entry: poetry run mypy src
+      #  # filenames should not be passed as they would collide with the config in pyproject.toml
+      #  pass_filenames: false
+      #  files: '^src(/[^/]*)*/[^/]*\.py$'
+      #  language: system
