--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ ipywidgets = "^8.1.1"
 mediapy = "^1.1.9"
 matplotx = "^0.3.10"
 seaborn = "^0.13.0"
+black = {extras = ["jupyter"], version = "^23.9.1"}
 
 
 [tool.poetry.group.dev]
