--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,26 +25,33 @@ include=["src/training_rl/assets"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
+accsr = "^0.4.5"
+celluloid = "^0.2.0"
+control = "^0.9.4"
+gymnasium = {extras = ["mujoco", "atari, accept-rom-license", "classic-control"], version = "^0.28"}
+ipywidgets = "^8.1.1"
+jupyter = "^1.0.0"
+jupyter-book = "^0.15.1"
+jupyter-contrib-nbextensions = "^0.7.0"
+matplotlib = "^3.8.0"
+matplotx = "^0.3.10"
+mediapy = "^1.1.9"
+nbconvert = "^7.2.10"
+nbformat = "^5.8.0"
+notebook = "<7.0.0"
 numpy = "^1"
 packaging = "*"
+pandas = {extras = ["performance"], version = "^2.1.0"}
+rise = "^5.7.1"
+seaborn = "^0.13.0"
+slycot = "^0.5.4"
+sphinx-rtd-theme = "^1.2.0"
+sphinxcontrib-websupport = "*"
 tensorboard = "^2.5.0"
 # Torch 2.0.1 causes problems, see https://github.com/pytorch/pytorch/issues/100974
-torch = "^2.0.0, !=2.0.1"
+torch = "^2.0.0, !=2.0.1, !=2.1.0"
 tqdm = "*"
-notebook = "<7.0.0"
-rise = "^5.7.1"
-jupyter-contrib-nbextensions = "^0.7.0"
 traitlets = "5.9.0"
-matplotlib = "^3.8.0"
-pandas = {extras = ["performance"], version = "^2.1.0"}
-accsr = "^0.4.5"
-control = "^0.9.4"
-slycot = "^0.5.4"
-ipywidgets = "^8.1.1"
-mediapy = "^1.1.9"
-matplotx = "^0.3.10"
-seaborn = "^0.13.0"
 
 
 [tool.poetry.group.dev]
@@ -98,7 +105,7 @@ select = [
     "ASYNC", "B", "C4", "C90", "COM", "D", "DTZ", "E", "F", "FLY", "G", "I", "ISC", "PIE", "PLC", "PLE", "PLW", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT",
 ]
 ignore = [
-    "SIM118", # Needed b/c iter(batch) != iter(batch.keys()). See https://github.com/thu-ml/tianshou/issues/922
+    "SIM118", # don't remove .keys() in iterations
     "E501",   # line too long. black does a good enough job
     "E741",   # variable names like "l". this isn't a huge problem
     "B008",   # do not perform function calls in argument defaults. we do this sometimes
