Fixes in Dockerfile and rise-requirements installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ numpy = "^1"
 packaging = "*"
 tensorboard = "^2.5.0"
 # Torch 2.0.1 causes problems, see https://github.com/pytorch/pytorch/issues/100974
-torch = "^2.0.0, !=2.0.1"
+torch = "^2.0.0, !=2.0.1, !=2.1.0"
 tqdm = "*"
 notebook = "<7.0.0"
 rise = "^5.7.1"
