--- a/.github/workflows/test_and_render.yaml
+++ b/.github/workflows/test_and_render.yaml
@@ -29,7 +29,7 @@ jobs:
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git lfs pull
       - name: Install package
-        run: poetry install
+        run: poetry install --with dev
       - name: Run tests
         run: poetry run pytest
       - name: Build docs
