--- a/pyproject-full.toml
+++ b/pyproject-full.toml
@@ -41,10 +41,9 @@ matplotx = "^0.3.10"
 mediapy = "^1.1.9"
 networkx = "^3.1"
 notebook = "<7.0.0"
-numpy = "^1"
+numpy = "<=1.24"
 packaging = "*"
 pandas = {extras = ["performance"], version = "^2.1.0"}
-rise = "^5.7.1"
 seaborn = "^0.13.0"
 slycot = "^0.5.4"
 tensorboard = "^2.5.0"
