Improved install, hopefully no post-init install needed now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,53 @@ ipywidgets = "^8.1.1"
 jupyter-contrib-nbextensions = "^0.7.0"
 notebook = "<7.0.0"
 
+[tool.poetry.group.add1]
+optional = true
+[tool.poetry.group.add1.dependencies]
+ipykernel = "^6.25.2"
+ipywidgets = "^8.1.1"
+jsonargparse = "^4.25.0"
+jupyter = "^1.0.0"
+jupyter-contrib-nbextensions = "^0.7.0"
+matplotlib = "^3.8.0"
+matplotx = "^0.3.10"
+networkx = "^3.1"
+notebook = "<7.0.0"
+# b/c of numba
+numpy = "<=1.24"
+packaging = "*"
+pandas = {extras = ["performance"], version = "^2.1.0"}
+seaborn = "^0.13.0"
+traitlets = "5.9.0"
+numba = "^0.57.1"
+overrides = "^7.4.0"
+virtualenv = [
+ # special sauce b/c of a flaky bug in poetry on windows
+ # see https://github.com/python-poetry/poetry/issues/7611#issuecomment-1466478926
+ { version = "^20.4.3,!=20.4.5,!=20.4.6" },
+ { version = "<20.16.4", markers = "sys_platform == 'win32'" },
+]
+
+[tool.poetry.group.add2]
+optional = true
+[tool.poetry.group.add2.dependencies]
+tensorboard = "^2.5.0"
+# Torch 2.0.1 causes problems, see https://github.com/pytorch/pytorch/issues/100974
+torch = "^2.0.0, !=2.0.1, !=2.1.0"
+tqdm = "*"
+h5py = "^3.9.0"
+docstring-parser = "^0.15"
+gymnasium = {extras = ["all"], version = "^0.28.0"}
+celluloid = "^0.2.0"
+
+
+[tool.poetry.group.control]
+optional = true
+[tool.poetry.group.control.dependencies]
+slycot = "^0.5.4"
+mediapy = "^1.1.9"
+control = "^0.9.4"
+do-mpc = "^4.6.1"
 
 
 [tool.poetry.group.dev]
@@ -42,9 +89,6 @@ poethepoet = "^0.20.0"
 pre-commit = "^3.3.3"
 pytest = "*"
 pytest-cov = "*"
-# Ray currently causes issues when installed on windows server 2022 in CI
-# If users want to use ray, they should install it manually.
-ray = {version = "^2", markers = "sys_platform != 'win32'"}
 ruff = "^0.0.285"
 sphinx = "<7"
 sphinx_rtd_theme = "*"
