--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ipykernel = "^6.25.2"
 ipywidgets = "^8.1.1"
 jupyter-contrib-nbextensions = "^0.7.0"
 notebook = "<7.0.0"
+rise = "^5.7.1"
 matplotlib = "^3.8.0"
 seaborn = "^0.13.0"
 traitlets = "5.9.0"
