--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ notebook = "<7.0.0"
 optional = true
 [tool.poetry.group.offline.dependencies]
 minari = "^0.4.2"
+chardet ="*"
 
 [tool.poetry.group.add1]
 optional = true
