Some changes to make the code compatible with last version of Tianshou and other minor changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ optional = true
 [tool.poetry.group.offline.dependencies]
 minari = "^0.4.2"
 chardet ="*"
+opencv-python="*"
+tensorboardX="*"
+pygame = "*"
 
 [tool.poetry.group.add1]
 optional = true
