--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ virtualenv = [
     { version = "^20.4.3,!=20.4.5,!=20.4.6" },
     { version = "<20.16.4", markers = "sys_platform == 'win32'" },
 ]
+tianshou = "^0.5.1"
 
 [tool.poetry.group.add1]
 optional = true
