--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 data/**/* filter=lfs diff=lfs merge=lfs -text
 docs/*.ipynb filter=lfs diff=lfs merge=lfs -text
 docs/_static/* filter=lfs diff=lfs merge=lfs -text
+presentations/* filter=lfs diff=lfs merge=lfs -text
