Several further improvements in notebooks

--- a/notebooks/_config.yml
+++ b/notebooks/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: thesan_output
+title: Reinforcement Learning and Control
 author: appliedAI TransferLab
 logo: _static/images/transferlab-logo.svg
 
