--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,14 @@ include=["src/training_rl/assets"]
 python = "^3.11"
 ipykernel = "^6.25.2"
 ipywidgets = "^8.1.1"
+jupyter = "^1.0.0"
+jupyter-book = "^0.15.1"
 jupyter-contrib-nbextensions = "^0.7.0"
+matplotlib = "^3.8.0"
 notebook = "<7.0.0"
 rise = "^5.7.1"
-matplotlib = "^3.8.0"
 seaborn = "^0.13.0"
+tianshou = {git = "https://github.com/thu-ml/tianshou.git", rev = "8d3d1f1"}
 traitlets = "5.9.0"
 # special sauce b/c of a flaky bug in poetry on windows
 # see https://github.com/python-poetry/poetry/issues/7611#issuecomment-1466478926
@@ -39,12 +42,10 @@ virtualenv = [
     { version = "^20.4.3,!=20.4.5,!=20.4.6" },
     { version = "<20.16.4", markers = "sys_platform == 'win32'" },
 ]
-tianshou = {git = "https://github.com/thu-ml/tianshou.git", rev = "8d3d1f1"}
 
 [tool.poetry.group.add1]
 optional = true
 [tool.poetry.group.add1.dependencies]
-pettingzoo = "^1.24.1"
 jsonargparse = "^4.25.0"
 numba = "^0.57.1"
 # b/c of numba
@@ -52,6 +53,7 @@ numpy = "<=1.24"
 overrides = "^7.4.0"
 packaging = "*"
 pandas = {extras = ["performance"], version = "^2.1.0"}
+pettingzoo = "^1.24.1"
 
 [tool.poetry.group.add2]
 optional = true
@@ -70,18 +72,18 @@ optional = true
 [tool.poetry.group.control.dependencies]
 control = "^0.9.4"
 do-mpc = "^4.6.1"
-mediapy = "^1.1.9"
 gymnasium = {extras = ["classic-control", "mujoco"], version = "^0.28.0"}
+mediapy = "^1.1.9"
 networkx = "^3.1"
 
 [tool.poetry.group.offline]
 optional = true
 [tool.poetry.group.offline.dependencies]
-minari = "^0.4.2"
 chardet ="*"
+minari = "^0.4.2"
 opencv-python="*"
-tensorboardX="*"
 pygame = "*"
+tensorboardX="*"
 
 
 [tool.poetry.group.dev]
