--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ ipywidgets = "^8.1.1"
 jupyter = "^1.0.0"
 jupyter-book = "^0.15.1"
 jupyter-contrib-nbextensions = "^0.7.0"
+jupyterlab_widgets = "^3.0.10"
 matplotlib = "^3.8.0"
 notebook = "<7.0.0"
 rise = "^5.7.1"
